# riemann-zero-lab

./: README.md  adaptive_scan.py  analysis.py  config.py  gaps.py  gram.py  gram_check.py  hardy_z.py  main.py  parallel_scan.py  plot_advanced.py  pyproject.toml  theta.py  turing_check.py  z_fast.py  zero_finder.py
docs/: future_work.md  methodology.md  overview.md  turing_check.md
